--- a/app/src/main/res/layout/mcdonalds_spotify.xml
+++ b/app/src/main/res/layout/mcdonalds_spotify.xml
@@ -163,6 +163,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginStart="15dp"
+                android:layout_weight="5"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -181,7 +182,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/dots_icon"
-                android:layout_marginStart="250dp"
+                android:layout_weight="0.5"
                 />
         </LinearLayout>
         <LinearLayout
@@ -202,6 +203,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginStart="15dp"
+                android:layout_weight="5"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -220,7 +222,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/dots_icon"
-                android:layout_marginStart="250dp"
+                android:layout_weight="0.7"
                 />
         </LinearLayout>
         <LinearLayout
@@ -241,6 +243,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginStart="15dp"
+                android:layout_weight="5"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -259,7 +262,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/dots_icon"
-                android:layout_marginStart="250dp"
+                android:layout_weight="0.5"
                 />
         </LinearLayout>
         <LinearLayout
@@ -280,6 +283,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginStart="15dp"
+                android:layout_weight="5"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -298,7 +302,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/dots_icon"
-                android:layout_marginStart="250dp"
+                android:layout_weight="0.5"
                 />
         </LinearLayout>
         <LinearLayout
@@ -319,6 +323,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginStart="15dp"
+                android:layout_weight="5"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -337,7 +342,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/dots_icon"
-                android:layout_marginStart="250dp"
+                android:layout_weight="0.5"
                 />
         </LinearLayout>
     </LinearLayout>
